# cccc

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  INBOX_CHECK_FIX.md  MANIFEST.in  MCP_INTEGRATION.md  NEXT_STEPS.md  PEERA.md  PEERB.md  PEERC.md  PROGRESS.md  PROJECT.md  README.ja.md  README.md  README.zh-CN.md  RELEASE_NOTES_0.3.13.md  SESSION_PROGRESS.md  activate_cccc.sh  cccc.py  jma_search_page.html  prefecture_selection.html  pyproject.toml  start.ps1  start_cccc_with_mcp.sh  test_wecom.py  tokyo_heat_analysis.md  tokyo_heat_analysis_final.md  verify_quit_implementation.py
.cccc/: cccc_tui.py  delivery.py  evidence_runner.py  mailbox.py  mock_agent.py  orchestrator_tmux.py  panel_status.py  por_manager.py  por_subpor.py  prompt_weaver.py  tui_diagnostics.py
.cccc/adapters/: bridge.py  bridge_discord.py  bridge_slack.py  bridge_telegram.py  bridge_wecom.py  gemini_chat.py  outbox_consumer.py  telegram_bridge.py
.cccc/common/: __init__.py  config.py  status_format.py
.cccc/orchestrator/: auto_compact.py  bridge_runtime.py  command_queue.py  command_queue_runtime.py  console_commands.py  console_util.py  events.py  foreman.py  foreman_scheduler.py  handoff.py  handoff_helpers.py  json_util.py  keepalive.py  launcher.py  logging_util.py  mailbox_pipeline.py  nudge.py  policy_filter.py  status.py  task_manager.py  task_schema.py  tmux_layout.py
.cccc/personas/: peerA.persona.txt  peerB.persona.txt
.cccc/prompts/: peerA.core.txt  peerB.core.txt  shared.guardrails.txt
.cccc/rules/: PEERA.md  PEERB.md  PEERC.md
.cccc/settings/: agents.yaml  cli_profiles.yaml  discord.yaml  governance.yaml  mcp_env.sh  policies.yaml  roles.yaml  slack.yaml  telegram.yaml  traits.yaml  wecom.yaml
.cccc/state/: handoff_guard.json  ledger.jsonl  locks.json  mailbox_seen.json  nudge.peerA.json  nudge.peerB.json  outbound_seen.json  outbox-peerA.jsonl  outbox-peerB.jsonl  outbox-seen-telegram.json  outbox-seen.json  outbox.jsonl  preamble_sent.json  queue.json  review_rev_state.json  session.json  status.json  telegram-offset.json  telegram-subs.json
.cccc/tui/: __init__.py  app.py  styles.tcss
.cccc/tui_ptk/: __init__.py  app.py  task_panel.py
.cccc/work/: collaboration_test.py
.claude/: mcp.json
.github/workflows/: ci.yml  desktop-release.yml  docs.yml  release.yml
cccc_scaffold/scaffold/: orchestrator_tmux.py
config/: policies.yaml  roles.yaml
desktop/: package-lock.json  package.json
desktop/scripts/: generate-icons.js  generate-sprites.js
desktop/src/: cat.js  index.html  ipc.js  panel.html  panel.js  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: bootstrap.rs  config.rs  deep_link.rs  keychain.rs  lib.rs  notification.rs  sse_client.rs  state_aggregator.rs  token_store.rs  window_manager.rs
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
docs/: ADVANCED.md  ARCHITECTURE.md  BLUEPRINT_DESIGN.md  COMMANDS.md  DEMO.md  Evidence-Card-Spec.md  FAQ.md  LIFECYCLE.md  PRD-and-Roadmap.md  RFD-Card-Spec.md  Roadmap-IM-Generalized-Collab.md  SINGLE_PEER_MODE.md  Telegram-File-Guide.md  Trial-Ready-Plan.md  WECOM_BRIDGE_GUIDE.md  index.md  package-lock.json  package.json  rules-draft-PEERA.en.md  rules-draft-PEERB.en.md  voice-agent-status.md
docs/.vitepress/: config.ts
docs/_drafts/: rules-draft-PEERA.en.md  rules-draft-PEERB.en.md
docs/bak/: peerA.core.txt  peerB.core.txt  shared.guardrails.txt
docs/guide/: best-practices.md  capability-allowlist.md  faq.md  group-space-notebooklm.md  index.md  operations.md  use-cases.md  web-ui.md  workflows.md
docs/reference/: architecture.md  cli.md  features.md
docs/release/: rc19_file_matrix.csv  v0.4.10_release_notes.md  v0.4.11_release_notes.md  v0.4.12_release_notes.md  v0.4.3_release_notes.md  v0.4.4_release_notes.md  v0.4.5_release_notes.md  v0.4.6_release_notes.md  v0.4.7_release_notes.md  v0.4.8_release_notes.md  v0.4.9_release_notes.md
docs/sdk/: CLIENT_SDK.md
docs/standards/: CCCC_CONTEXT_OPS_V1.md  CCCC_DAEMON_IPC_V1.md  CCCS_V1.md
docs/vnext/: AGENT_GUIDANCE.md  ARCHITECTURE.md  CCCC_NEXT_GLOBAL_DAEMON.md  FEATURES.md  IM_BRIDGE.md  (+6 more)
orchestrator/: orchestrator_poc.py
prompts/: peerA.system.txt  peerB.system.txt
scripts/: build_package.ps1  build_package.sh  build_web.ps1  build_web.sh  capture_github.mjs  capture_qr.mjs  capture_report.mjs  capture_screenshots.mjs  echo_agent.py  echo_poller.py  embed_images.mjs  news_agent.py  run_echo_poller_gemini.bat  send_test.py  start_local_home_web.bat  sync_scaffold.py
test/: to_peer.md
tests/: test_access_token_routes.py  test_access_tokens.py  test_actor_delivery_planner.py  test_actor_group_state_contract.py  test_actor_inbound_rendering.py  test_actor_lifecycle_ops.py  test_actor_private_env.py  test_actor_profile_resolver.py  test_actor_profiles_ops.py  test_assistant_ops.py  test_automation_help_nudge_mind_context.py  test_automation_idle_standup_suppression.py  test_automation_nudge_digest.py  test_automation_silence_activity_filter.py  test_automation_tick_cadence.py  test_bootstrap_actor_ops.py  test_bootstrap_im_ops.py  test_bridge_stream_degradation.py  test_bridge_streaming.py  test_capability_ops.py  test_chat_ops.py  test_cli_common_local_url.py  test_cli_daemon_fallback.py  test_cli_default_entry_ownership.py  test_cli_main.py  test_cli_space_commands.py  test_cli_web_binding_resolution.py  test_client_ops.py  test_codex_app_flow.py  test_context_group_space_sync.py  test_context_memory_milestone_hook.py  test_context_storage_dirty_tolerance.py  test_context_sync_atomicity.py  test_context_v2_ops.py  test_core_workflow.py  test_daemon_core_ops.py  test_daemon_group_settings_desktop_pet.py  test_daemon_group_settings_dirty_tolerance.py  test_daemon_lifecycle.py  test_daemon_main.py  (+160 more)
venv-publish/: pyvenv.cfg
web/: components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
(+813 files in other folders)
